docs/api/qiskit/0.25/qiskit.circuit.Instruction.mdx
---
title: Instruction
description: API reference for qiskit.circuit.Instruction
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Instruction
---

# qiskit.circuit.Instruction

<Class id="qiskit.circuit.Instruction" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/circuit/instruction.py" signature="Instruction(name, num_qubits, num_clbits, params, duration=None, unit='dt')">
  Generic quantum instruction.

  Create a new instruction.

  **Parameters**

  *   **name** (*str*) – instruction name
  *   **num\_qubits** (*int*) – instruction’s qubit width
  *   **num\_clbits** (*int*) – instruction’s clbit width
  *   **params** (*list\[int|float|complex|str|ndarray|list|ParameterExpression]*) – list of parameters
  *   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
  *   **unit** (*str*) – time unit of duration

  **Raises**

  **CircuitError** – when the register is not in the correct format.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.Instruction.__init__" name="__init__" signature="__init__(name, num_qubits, num_clbits, params, duration=None, unit='dt')">
    Create a new instruction.

    **Parameters**

    *   **name** (*str*) – instruction name
    *   **num\_qubits** (*int*) – instruction’s qubit width
    *   **num\_clbits** (*int*) – instruction’s clbit width
    *   **params** (*list\[int|float|complex|str|ndarray|list|ParameterExpression]*) – list of parameters
    *   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
    *   **unit** (*str*) – time unit of duration

    **Raises**

    **CircuitError** – when the register is not in the correct format.
  </Function>

  ## Methods

  |                                                                                                                                         |                                                                          |
  | --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.Instruction.__init__ "qiskit.circuit.Instruction.__init__")(name, num\_qubits, num\_clbits, params)        | Create a new instruction.                                                |
  | [`add_decomposition`](#qiskit.circuit.Instruction.add_decomposition "qiskit.circuit.Instruction.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.Instruction.assemble "qiskit.circuit.Instruction.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.Instruction.broadcast_arguments "qiskit.circuit.Instruction.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.circuit.Instruction.c_if "qiskit.circuit.Instruction.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.circuit.Instruction.copy "qiskit.circuit.Instruction.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.Instruction.inverse "qiskit.circuit.Instruction.inverse")()                                                 | Invert this instruction.                                                 |
  | [`is_parameterized`](#qiskit.circuit.Instruction.is_parameterized "qiskit.circuit.Instruction.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.Instruction.mirror "qiskit.circuit.Instruction.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.circuit.Instruction.qasm "qiskit.circuit.Instruction.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.Instruction.repeat "qiskit.circuit.Instruction.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.Instruction.reverse_ops "qiskit.circuit.Instruction.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`soft_compare`](#qiskit.circuit.Instruction.soft_compare "qiskit.circuit.Instruction.soft_compare")(other)                             | Soft comparison between gates.                                           |
  | [`validate_parameter`](#qiskit.circuit.Instruction.validate_parameter "qiskit.circuit.Instruction.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                            |                                                                               |
  | ---------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.Instruction.decompositions "qiskit.circuit.Instruction.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.Instruction.definition "qiskit.circuit.Instruction.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.Instruction.duration "qiskit.circuit.Instruction.duration")                   | Get the duration.                                                             |
  | [`params`](#qiskit.circuit.Instruction.params "qiskit.circuit.Instruction.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.Instruction.unit "qiskit.circuit.Instruction.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.Instruction.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.Instruction.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Instruction.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.Instruction.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.circuit.Instruction.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](#qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.Instruction.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.Instruction.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.circuit.Instruction.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.Instruction.inverse" name="inverse" signature="inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](#qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.Instruction.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### mirror

  <Function id="qiskit.circuit.Instruction.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](#qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.circuit.Instruction.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### qasm

  <Function id="qiskit.circuit.Instruction.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.Instruction.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](#qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.Instruction.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](#qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.Instruction.soft_compare" name="soft_compare" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  ### unit

  <Function id="qiskit.circuit.Instruction.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.Instruction.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

